# automated_finances

./: README.md  pyproject.toml
data/: export-transactions_20250207.xlsx
files/: .$personal_finances.drawio.bkp  personal_finances.drawio
src/: crud_ops_aux.py  extract_data.py
src/database/: connection.py  init_db.py  models.py
src/pages/: Add_ou_Editar_Gastos.py  home.py
src/pages/pages/: Relatórios e Acompanhamentos.py
tests/: extract_test.ipynb  tests.py
