[project]
name = "automated-finances"
version = "0.1.0"
description = "Sistema de gerenciamento de gastos pessoais"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.2.0",
    "plotly>=5.19.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.2.0",
    "isort>=5.13.0"
]
